--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+body{
+    background: linear-gradient(to right, #fffcdc, #d9a7c7);
+}
+
 .list{
     display: flex;
 }
+
 .list>div{
     height: 500px;
     width: 300px;
