add_box to center, rounded button

--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@ body{
     background: linear-gradient(to right, #fffcdc, #d9a7c7);
 }
 
+/* positioned add-section div at the top center*/
+addSection{
+    position: absolute;
+    width: 200px;
+    height: 10px;
+	top:0;
+	bottom: 94%;
+	left: 0;
+	right: 0;
+    margin: auto;
+}
+
+#addSection_btn{
+    margin-top : 10px;
+    margin-left: 27%;
+    border : none;
+    border-radius: 50px;
+    height: 70px;
+    width : 70px;
+    background-color: #d9a7c7;
+    font-size: 50px;
+}
+
 .list{
     display: flex;
 }
