--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@ body{
     background: linear-gradient(to right, #fffcdc, #d9a7c7);
 }
 
+.mainDiv{
+    position: absolute;
+    top: 25%;
+    margin-bottom: 30px;
+}
+
+/*added distance between sections*/
+.cat_main{
+    margin-right: 30px;
+}
+
 /* positioned add-section div at the top center*/
 addSection{
     position: absolute;
@@ -14,6 +25,7 @@ addSection{
     margin: auto;
 }
 
+/*button design*/
 #addSection_btn{
     margin-top : 10px;
     margin-left: 27%;
@@ -23,6 +35,7 @@ addSection{
     width : 70px;
     background-color: #d9a7c7;
     font-size: 50px;
+    color :white;
 }
 
 .list{
