--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ body{
 }
 
 .mainDiv{
-    position: absolute;
-    top: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
+    margin: 100px auto;
     margin-bottom: 30px;
 }
 
@@ -40,7 +44,8 @@ addSection{
 }
 
 .list>div{
-    height: 500px;
+    height: auto;
+    min-height: 500px;
     width: 300px;
     border: 1px solid black;
     text-align: center;
