--- a/style.css
+++ b/style.css
@@ -136,6 +136,9 @@ addSection{
 }
 #weather>img{
     opacity: 0.8;
+    width: 32px;
+    height: 20px;
+    background-size:100% 100%;
 }
 
 #time{
